--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -7,7 +7,7 @@
         --accent-2: #bfc0d1;
         --accent-3: #60519b;
         --filter-color: #dda7ff7e;
-        --box-shadow: 0px 0px 15px #dda7ff7e;
+        --box-shadow: 0px 0px 40px #bfc0d1;
         --warning: #b80303;
     }
     :root.dark0 { /*Royal Dusk*/
@@ -18,7 +18,7 @@
         --accent-2: #bfc0d1;
         --accent-3: #60519b;
         --filter-color: #dda7ff7e;
-        --box-shadow: 0px 0px 15px #dda7ff7e;
+        --box-shadow: 0px 0px 40px #bfc0d1;
         --warning: #b80303;
     }
     /* dark theme number 1 */
@@ -406,6 +406,9 @@ a {
         color: var(--text-color);
         padding: 0 2em;
         text-decoration: none;
+    }
+    .desktop-navContent a:hover {
+        text-shadow: var(--box-shadow);
     }
     .projects-container {
         display: flex;
