worked a little on settings for mobile friendly

--- a/mobile-friendly/mf-css/settings.css
+++ b/mobile-friendly/mf-css/settings.css
@@ -91,7 +91,13 @@
         justify-content: space-evenly;
         width: 100%;
     }
+    .tab-link {
+        cursor: pointer;
+    }
     .tabcontent {
         
+    }
+    #change-pfp-image {
+        width: 8em;
     }
 }
