--- a/mobile-friendly/mf-css/settings.css
+++ b/mobile-friendly/mf-css/settings.css
@@ -79,11 +79,13 @@
         align-items: center;
     }
     .settings-container {
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-template-rows: auto auto auto;
-        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: 90%;
+        min-height: 15em;
         background-color: var(--accent-1);
+        /* padding: 0.5em 0.5em 1em 0.5em; */
     }
     .tab {
         grid-column: span 2;
@@ -94,10 +96,36 @@
     .tab-link {
         cursor: pointer;
     }
+    .tab-link p {
+        font-size: 18px;
+    }
     .tabcontent {
-        
+        width: 100%;
+    }
+    .appearance-contents {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+    }
+    .pfp-change-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 100%;
     }
     #change-pfp-image {
+        width: 6em;
+        margin-bottom: 1.5em;
+    }
+    .pfp-change-wrapper button {
         width: 8em;
+    }
+    .theme-change-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
