--- a/mobile-friendly/mf-css/settings.css
+++ b/mobile-friendly/mf-css/settings.css
@@ -265,14 +265,66 @@
         font-size: 35px;
         margin-bottom: 1rem;
     }
-    #delete {
-        width: 8em;
-        height: 4em;
+    .delete {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 7em;
+        height: 3.5em;
         background-color: var(--warning);
         border: 2px solid var(--background-color);
         border-radius: 24px;
     }
+    #delete {
+        color: var(--reverse-text-color);
+    }
+    #warning {
+        position: absolute;
+        z-index: 10;
+        width: 100%;
+        height: 100%;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+    }
+    .warning-wrapper {
+        width: 90%;
+        background-color: var(--text-color);
+        padding: 1em;
+    }
+    .warning-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .warning-text {
+        color: var(--reverse-text-color);
+    }
+    .warning-content h1 {
+        font-size: 35px;
+        margin-bottom: 0.3em;
+    }
+    .button-wrapper-warning {
+        display: flex;
+        justify-content: space-between;
+        padding: 1em;
+    }
+    #hide-warning {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 7em;
+        background-color: var(--accent-2);
+        border-radius: 24px;
+        color: var(--text-color);
+    }
 }
+/* .show {
+    display: flex;
+} */
 .active {
     display: flex;
     color: var(--accent-2);
