--- a/mobile-friendly/mf-css/settings.css
+++ b/mobile-friendly/mf-css/settings.css
@@ -178,6 +178,7 @@
     }
     .theme-change-button {
         display: flex;
+        position: relative;
         justify-content: center;
         align-items: center;
         width: 6em;
@@ -192,7 +193,8 @@
     .theme-change-dropdown {
         display: none;
         position: absolute;
-        translate: 0 9.2em;
+        translate: 0 2em;
+        top: 0;
         z-index: 1;
         width: 7em;
         background-color: var(--accent-1);
