--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -94,6 +94,10 @@
         --text-shadow: 0px 0px 10px var(--accent-2);
         --warning: #b80303;
     }
+
+
+
+
 /**MOBILE*/
 @media only screen and (min-width: 200px) {
     .project-select-wrapper {
@@ -135,18 +139,13 @@
     .project-select-popup {
         display: flex;
         z-index: 1;
-        /* position: absolute; */
         flex-direction: column;
-        /* justify-content: space-evenly; */
-        /* translate: 0 3em;
-        top: 0; */
         height: fit-content;
         width: 90%;
         background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
         border-radius: 16px;
-        /* padding: 2em 1em; */
-        padding-top: 1em;
+        padding: 1em 1em 0 1em;
         margin-top: 6em;
     }
     .project-select-content {
@@ -154,7 +153,8 @@
         /* justify-content: center; */
         align-items: center;
         height: 6em;
-        padding: 0.5em;
+        /* padding: 0.5em; */
+        /* border-bottom: 1px solid var(--accent-3); */
         cursor: pointer;
     }
     .project-select-content:hover #popup-project-title {
@@ -172,11 +172,9 @@
     }
     .project-stats {
         display: flex;
-        /* justify-content: space-evenly; */
     }
     #popup-project-title {
         width: 16em;
-        /* height: 3em; */
         margin-bottom: 0.5em;
         text-overflow:ellipsis;
         white-space:nowrap;
@@ -190,7 +188,7 @@
         display: flex;
         justify-content: end;
         width: 100%;
-        padding: 1em 2em;
+        padding: 1em 0em;
     }
     #save {
         width: 5em;
@@ -200,21 +198,6 @@
         border-radius: 16px;
         cursor: pointer;
     }
-    /* .project-select-content:hover {
-        background-color: var(--accent-3);
-        border-radius: 0;
-    }
-    .project-select-content:hover:first-child {
-        border-radius: 14px 14px 0 0;
-    }
-    .project-select-content:hover:last-child {
-        border-radius: 0 0 14px 14px;
-    } */
-    /* .project-select-link {
-        text-decoration: none;
-        color: var(--text-color);
-        font-size: 22px;
-    } */
     .current-project-wrapper {
         display: flex;
         justify-content: center;
@@ -269,11 +252,31 @@
     }
 }
 
-/**TABLET*/
+
+
+
+/**TABLET PORTRAIT*/
 @media only screen and (min-width: 720px) {
     .project-select-wrapper {
         padding-right: 2em;
     }
+    .project-select-popup {
+        width: 60%;
+        padding-left: 1em;
+    }
+    /* .project-select-content {
+        height: 6.5em;
+    } */
+    .popup-image {
+        margin-right: 1em;
+        border-radius: 4px;
+    }
+    #popup-project-title {
+        width: 20em;
+    }
+    /* .button-wrapper {
+        padding: 1em 2em;
+    } */
     .current-project-container {
         column-gap: 2em;
     }
@@ -291,8 +294,21 @@
     }
 }
 
-/**DESKTOP*/
+
+
+
+/**TABLE LANDSCAPE or SMALL DESKTOP*/
 @media only screen and (min-width: 1000px) {
+    .project-select-popup {
+        width: 50%;
+        padding-left: 1em;
+    }
+    #popup-project-title {
+        width: 21em;
+    }
+    .button-wrapper {
+        padding: 1em 1.5em 1.5em 0;
+    }
     .main-wrapper {
         display: flex;
         flex-direction: row;
@@ -315,5 +331,22 @@
         background-color: var(--background-color);
         border-top: none;
         border-left: 2px solid var(--accent-3);
+    }
+}
+
+
+
+
+@media only screen and (min-width: 1400px) {
+    .project-select-wrapper {
+        padding-right: 3.7em;
+    }
+    .project-select-popup {
+        width: 40%;
+        padding: 1.5em 0 0 1.5em;
+        margin-top: 8em;
+    }
+    #popup-project-title {
+        width: 22em;
     }
 }
