--- a/mobile-friendly/mf-css/progressBar.css
+++ b/mobile-friendly/mf-css/progressBar.css
@@ -155,6 +155,7 @@
     }
     #edit-pb {
         font-size: 24px;
+        cursor: pointer;
     }
 }
 @media only screen and (min-width: 326px) {
