testing popup js

--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -318,6 +318,10 @@ a {
         grid-column: span 2;
         justify-self: center;
     }
+    /** BADGE POPUPS*/
+    .badgeToPopup {
+        display: none;
+    }
 }
 
 
