--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -318,9 +318,40 @@ a {
         grid-column: span 2;
         justify-self: center;
     }
+
+
     /** BADGE POPUPS*/
+    .badge-wrapper {
+        position: relative;
+    }
     .badgeToPopup {
-        display: none;
+        display: flex;
+        position: absolute;
+        top: 0;
+        z-index: 2;
+        flex-direction: column;
+        align-items: center;
+        width: 8em;
+        background-color: var(--background-color);
+        border: 2px solid var(--accent-3);
+        border-radius: 16px 16px 16px 0;
+        padding: 0.3em;
+    }
+    .badgeToPopup > h3 {
+        text-align: center;
+    }
+    .badgeToPopup > p {
+        font-size: 12px;
+        text-align: center;
+    }
+
+
+    /** Individual badge movement*/
+    #first-daily-popup {
+        translate: 3em -5em;
+    }
+    #quarter-quomplete-popup {
+        translate: 3em -6.5em;
     }
 }
 
