--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -325,7 +325,7 @@ a {
         position: relative;
     }
     .badgeToPopup {
-        display: flex;
+        display: none;
         position: absolute;
         /* top: 0; */
         z-index: 2;
