--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -327,7 +327,7 @@ a {
     .badgeToPopup {
         display: none;
         position: absolute;
-        /* top: 0; */
+        top: 0;
         z-index: 2;
         flex-direction: column;
         align-items: center;
@@ -347,12 +347,12 @@ a {
 
 
     /** Individual badge movement*/
-    /* #first-daily-popup {
-        translate: 3em -5em;
+    #first-daily-popup {
+        translate: 3em -4.5em;
     }
     #quarter-quomplete-popup {
-        translate: 3em -6.5em;
-    } */
+        translate: 3em -6em;
+    }
 }
 
 
