added second row of badge popups

--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -331,7 +331,9 @@ a {
         z-index: 2;
         flex-direction: column;
         align-items: center;
+        justify-content: space-evenly;
         width: 10em;
+        min-height: 4em;
         background-color: var(--background-color);
         border: 2px solid var(--accent-3);
         border-radius: 16px 16px 16px 0;
@@ -362,6 +364,23 @@ a {
     }
     #cross-finish-popup {
         translate: -9em -5em;
+        border-radius: 16px 16px 0 16px;
+    }
+    #streak-two-popup {
+        translate: 3em -3em;
+    }
+    #streak-three-popup {
+        translate: 3em -2.5em;
+    }
+    #streak-seven-popup {
+        translate: 3em -2.5em;
+    }
+    #streak-fourteen-popup {
+        translate: -9em -2.5em;
+        border-radius: 16px 16px 0 16px;
+    }
+    #streak-twentyOne-popup {
+        translate: -9em -2.5em;
         border-radius: 16px 16px 0 16px;
     }
 }
