add pointer cursor to badges

--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -302,6 +302,7 @@ a {
     .badge {
         width: 3.5em;
         height: fit-content;
+        cursor: pointer;
     }
     footer {
         display: grid;
