--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -376,6 +376,40 @@
         translate: -9em -4.5em;
         border-radius: 16px 16px 0 16px;
     }
+    #starting-fresh-popup {
+        translate: 3em -3.5em;
+    }
+    #ever-persist-popup {
+        translate: 3em -3.5em;
+    }
+    #back-it-up-popup {
+        translate: 3em -6em;
+    }
+    #gathering-popup {
+        translate: -9em -4.5em;
+        border-radius: 16px 16px 0 16px;
+    }
+    #hear-ye-popup {
+        translate: -9em -5.5em;
+        border-radius: 16px 16px 0 16px;
+    }
+    #breakthrough-popup {
+        translate: 3em -6em;
+    }
+    #touch-grass-popup {
+        translate: 3em -3.5em;
+    }
+    #business-popup {
+        translate: 3em -6em;
+    }
+    #tears-wept-popup {
+        translate: -9em -5.5em;
+        border-radius: 16px 16px 0 16px;
+    }
+    #finish-him-popup {
+        translate: -9em -5.5em;
+        border-radius: 16px 16px 0 16px;
+    }
 }
 
 
