changed padding for mobile nav bar to have less negative spacce

--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -197,7 +197,7 @@ a {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 1em 0em;
+        padding: 1em 0 0em 0;
     }
     .mobileNav {
         display: block;
