--- a/mobile-friendly/mf-css/settings.css
+++ b/mobile-friendly/mf-css/settings.css
@@ -99,6 +99,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 1.5em;
     }
     .settings-container {
         display: flex;
