added js to update new project image preview and get it working

--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -190,6 +190,7 @@
     .preview-section img {
         justify-self: center;
         width: 8em;
+        border-radius: 4px;
     }
     .preview-section h2 {
         grid-column: span 2;
