--- a/mobile-friendly/mf-css/progressBar.css
+++ b/mobile-friendly/mf-css/progressBar.css
@@ -150,10 +150,10 @@
     .added {
         display: flex;
         width: 100%;
-        justify-content: flex-end;
-        padding-right: 0.5em;
+        justify-content: space-between;
+        padding: 0 0.5em;
     }
-    #edit-pb {
+    #edit-pb, #updateCount {
         font-size: 24px;
         cursor: pointer;
     }
