--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -100,6 +100,7 @@
 
 /**MOBILE*/
 @media only screen and (min-width: 200px) {
+    /** Select Project Popup*/
     .project-select-wrapper {
         display: flex;
         justify-content: end;
@@ -192,6 +193,34 @@
         border-radius: 16px;
         cursor: pointer;
     }
+    /** Update Word Count Popup*/
+    .count-update-wrapper {
+        display: none;
+        z-index: 10;
+        position: absolute;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+    }
+    .count-update-popup {
+        display: flex;
+        z-index: 1;
+        flex-direction: column;
+        height: fit-content;
+        width: 90%;
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-3);
+        border-radius: 16px;
+        padding: 1em 1em 0 1em;
+        margin-top: 6em;
+    }
+    .count-type-dropdown {
+        display: none;
+    }
+
+    /** Current Project overview*/
     .current-project-wrapper {
         display: flex;
         justify-content: center;
