--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -206,6 +206,7 @@
     }
     .count-update-popup {
         display: flex;
+        position: relative;
         z-index: 1;
         flex-direction: column;
         height: fit-content;
@@ -216,8 +217,87 @@
         padding: 1em 1em 0 1em;
         margin-top: 6em;
     }
+    .close-wrapper {
+        /* display: flex;
+        justify-content: end;
+        width: 100%; */
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 0.7em;
+    }
+    .fa-close {
+        cursor: pointer;
+    }
+    .count-update-popup form {
+        display: flex;
+        flex-direction: column;
+    }
+    .count-type-select-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 4.5em;
+    }
+    .count-type-select {
+        display: flex;
+        text-align: center;
+        /* justify-content: center; */
+        align-items: center;
+        position: relative;
+        width: 35%;
+        height: 2.7em;
+        cursor: pointer;
+        background-color: var(--accent-1);
+        color: var(--text-color);
+        border: 2px solid var(--accent-3);
+        border-radius: 8px;
+    }
+    .count-type-select > p {
+        font-size: 20px;
+    }
     .count-type-dropdown {
         display: none;
+        position: absolute;
+        translate: 0 2em;
+        top: 0;
+        z-index: 1;
+        width: 80%;
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-3);
+        border-radius: 16px;
+        margin-top: 0.3em;
+    }
+    .count-type-select:hover .count-type-dropdown {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    .count-type-list {
+        text-align: center;
+        width: 100%;
+        cursor: pointer;
+    }
+    .count-type-list:hover {
+        background-color: var(--accent-3);
+        color: var(--text-color);
+    }
+    .count-type-list:hover:first-child {
+        border-radius: 10px 10px 0 0;
+    }
+    .count-type-list:hover:last-child {
+        border-radius: 0 0 10px 10px;
+    }
+    #updateWordCount {
+        background-color: var(--accent-1);
+        color: var(--text-color);
+        border: var(--accent-2) solid 2px;
+        border-radius: 4px;
+        accent-color: var(--background-color);
+        padding: 8px;
+        width: 60%;
+        height: 2.5em;
     }
 
     /** Current Project overview*/
