--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -135,6 +135,7 @@
         backdrop-filter: blur(5px);
     }
     .project-select-popup {
+        position: relative;
         display: flex;
         z-index: 1;
         flex-direction: column;
@@ -240,6 +241,7 @@
         height: 4.5em;
     }
     .count-type-select {
+        /* appearance: none; */
         display: flex;
         text-align: center;
         /* justify-content: center; */
@@ -298,6 +300,14 @@
         padding: 8px;
         width: 60%;
         height: 2.5em;
+    }
+    .save {
+        width: 5em;
+        height: 2.5em;
+        background-color: var(--text-color);
+        border: 2px solid var(--accent-2);
+        border-radius: 16px;
+        cursor: pointer;
     }
 
     /** Current Project overview*/
