--- a/mobile-friendly/mf-css/progressBar.css
+++ b/mobile-friendly/mf-css/progressBar.css
@@ -150,7 +150,7 @@
     .added {
         display: flex;
         width: 100%;
-        justify-content: space-between;
+        justify-content: end;
         padding: 0 0.5em;
     }
     #edit-pb, #updateCount {
