--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -444,6 +444,7 @@ a {
         flex-direction: row;
         align-items: center;
         width: 100%;
+        padding: 0;
     }
     .desktop-navContent {
         flex: 1;
