--- a/mobile-friendly/mf-css/projects.css
+++ b/mobile-friendly/mf-css/projects.css
@@ -117,6 +117,7 @@
     }
     .overview-container img {
         width: 4em;
+        border-radius: 4px;
         margin: 0.5em 0;
     }
     .overview-info {
@@ -146,6 +147,21 @@
     .overview-wordCount > p, .overview-badges > p {
         font-size: 16px;
         margin-right: 0.5em;
+    }
+}
+
+
+
+
+@media only screen and (min-width: 720px) {
+    .overview-container{
+        width: 80%;
+    }
+    .overview-summary {
+        width: 37em;
+    }
+    .overview-container img {
+        width: 5em;
     }
 }
     
