--- a/mobile-friendly/mf-css/projects.css
+++ b/mobile-friendly/mf-css/projects.css
@@ -126,8 +126,8 @@
         justify-content: space-evenly;
         width: 70%;
     }
-   .overview-title {
-    font-size: 24px;
+    .overview-title {
+        font-size: 24px;
     }
     .overview-summary {
         width: 24em;
@@ -157,11 +157,53 @@
     .overview-container{
         width: 80%;
     }
+    .overview-container img {
+        width: 5em;
+    }
     .overview-summary {
         width: 37em;
     }
+}
+
+
+
+
+
+@media only screen and (min-width: 1000px) {
     .overview-container img {
-        width: 5em;
+        width: 7em;
+    }
+    .overview-title {
+        font-size: 28px;
+    }
+    .overview-summary {
+        width: 40em;
+        font-size: 16px;
+    }
+    .overview-wordCount > p, .overview-badges > p {
+        font-size: 20px;
+    }
+}
+
+
+
+
+@media only screen and (min-width: 1400px) {
+    .main-wrapper {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        /* justify-content: center;
+        align-items: center; */
+    }
+    .overview-container {
+        justify-self: center;
+    }
+    .main-wrapper h1 {
+        grid-column: 1/ span 2;
+        justify-self: center;
+    }
+    .overview-summary {
+        width: 24em;
     }
 }
     
