--- a/mobile-friendly/mf-css/archives.css
+++ b/mobile-friendly/mf-css/archives.css
@@ -104,7 +104,7 @@
         align-items: center;
         padding: 0em 1em;
     }
-    .overview-container{
+    .overview-container {
         display: flex;
         justify-content: space-evenly;
         width: 100%;
@@ -146,6 +146,9 @@
     .overview-wordCount > p, .overview-badges > p {
         font-size: 16px;
         margin-right: 0.5em;
+    }
+    .overview-container:hover .overview-title {
+        color: var(--accent-3);
     }
 }
 
